fix font color, coming soon page restart btn dark mode

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1041,6 +1041,7 @@ div.showcase-images-container a img {
 .error-restart-btn {
     border: 2px gray solid;
     border-radius: 10px;
+    color: var(--containerTextColor);
     padding: 2px;
     margin-bottom: 10px;
     margin-right: 10px;
